[project]
name = "grounding-llms-with-online-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "blosc>=1.11.3",
    "colorama>=0.4.6",
    "datasets>=2.19.2",
    "imageio>=2.37.2",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "openai>=2.7.1",
    "peft>=0.17.1",
    "protobuf==3.20.*",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "sentencepiece>=0.1.91",
    "tensorboard==2.7.0",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-wit==1.8.0",
    "tensorboardx==1.8",
    "termcolor>=3.2.0",
    "torch>1.8.1",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm==4.64.0",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
